# tictac

./: .aider.chat.history.md  .aider.input.history  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  handlers.rs  main.rs  models.rs  run.sh
.aider.ident.cache.v1/: cache.db  cache.db-shm  cache.db-wal
.aider.tags.cache.v1/: cache.db  cache.db-shm  cache.db-wal
api/: Cargo.toml  Makefile  TODO.md  auth.rs  main.rs  models.rs  schema.rs  test.db
api/handlers/: lists.rs  projects.rs  tasks.rs
api/migrations/001_initial/: down.sql  up.sql
api/src/: auth.rs  db.rs  main.rs  migrations.sql  schema.rs
api/src/db/: query_builder.rs
api/src/handlers/: handlers.rs  lists.rs  mod.rs  projects.rs  search.rs  tags.dart  tags.rs  tasks.rs  users.rs
api/src/models/: comment.rs  list.rs  mod.rs  models.rs  project.rs  role.rs  tag.rs  tags.rs  task.rs  user.rs
api/src/routes/: collab.rs  comments.rs  mod.rs
lib/src/services/: calendar.dart  notifications.dart
src/db/: query_builder.rs
src/models/: comment.rs  role.rs
src/routes/: collab.rs
ui/: Dockerfile  TODO.md  pubspec.yaml  rust_api.dart
ui/lib/: main.dart
ui/lib/screens/: task_details_view.dart  today_view.dart
ui/lib/src/: api_service.dart  wasm_interop.dart  wasm_loader.dart  wasm_service.dart
ui/lib/src/screens/: analytics.dart  landing_view.dart  setting_view.dart  sign_in_view.dart  sign_up_view.dart  task_details_view.dart  task_list_view.dart  tasks_view.dart  today_view.dart  upcoming_view.dart
ui/lib/src/services/: api_service.dart  calendar.dart  lists.dart  (+4 more)
(+2 files in other folders)
