// api/Cargo.toml
[package]
name = "tictac_api"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = ["postgres"] }
meilisearch-sdk = "0.24.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = {optional = true, version = "1.8.4"}
bcrypt = "0.10.1"
jsonwebtoken = "7.2.0"
dotenvy = "0.15"
