[package]
name = "tictac_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4.3.1"}
[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "postgres", "r2d2", "postgres", "sqlite"] }
dotenv = "0.15.0"
meilisearch-sdk = "0.24.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = {optional = true, version = "1.8.4"}
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
dotenvy = "0.15"
chrono = "0.4.26"

#actix-web.workspace = true
#env_logger.workspace = true
#log.workspace = true
